Fixing padding left when collapse main menu

--- a/app/assets/stylesheets/layoutfix.css.scss
+++ b/app/assets/stylesheets/layoutfix.css.scss
@@ -688,7 +688,7 @@ body{
   padding-top: 15px;
   &.menu-collapsed{
     width: 100%;
-    padding-left: 0px;
+    padding-left: 15px;
   }
 }
 
